--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
 polars==0.19.19
+pandas>=2.0.0
 openpyxl==3.1.2
 python-multipart==0.0.6
 duckdb==1.4.1
